Cleaning my code from any wornning or deplicated code